--- a/todo_app/views/ticket.xml
+++ b/todo_app/views/ticket.xml
@@ -36,9 +36,9 @@
         </record>
 
         <!-- Menu Items -->
-        <menuitem id="menu_todo_tickets" name="Tickets" parent="todo.menu_root"/>
-        <menuitem id="menu_todo_tickets_all" name="All Tickets" parent="menu_todo_tickets" action="action_todo_tickets_all"/>
-        <menuitem id="menu_todo_tickets_my" name="My Tickets" parent="menu_todo_tickets" action="action_todo_tickets_my"/>
+        <menuitem id="todo_app" name="Tickets"/>
+        <menuitem id="menu_todo_tickets_all" name="All Tickets" parent="todo_app" action="action_todo_tickets_all"/>
+        <menuitem id="menu_todo_tickets_my" name="My Tickets" parent="todo_app" action="action_todo_tickets_my"/>
 
         <!-- Actions -->
         <record id="action_todo_tickets_all" model="ir.actions.act_window">
