Lab 2 (Lab 2 File) Not Working menu error

--- a/hms/views/base_menus.xml
+++ b/hms/views/base_menus.xml
@@ -1,4 +1,7 @@
 <odoo>
-    <menuitem id="hms" name="Hospitals Management System"/>
-    <menuitem id="menu_hms_patient_all" name="All Patients" parent="hms" action="action_hms_patient_all"/>
+    <data>
+        <menuitem id="menu_hms" name="Hospitals Management System"/>
+        <menuitem id="menu_hms_department" name="Departments" parent="menu_hms" action="action_department_form"/>
+        <menuitem id="menu_hms_doctor" name="Doctors" parent="menu_hms" action="action_doctor_form"/>
+    </data>
 </odoo>
