Naming Best Practice

--- a/hms/views/department.xml
+++ b/hms/views/department.xml
@@ -1,6 +1,6 @@
 <odoo>
     <data>
-        <record id="view_department_form" model="ir.ui.view">
+        <record id="department_form_view" model="ir.ui.view">
             <field name="name">hms.department.form</field>
             <field name="model">hms.department</field>
             <field name="arch" type="xml">
