--- a/hms/views/department.xml
+++ b/hms/views/department.xml
@@ -1,7 +1,7 @@
 <odoo>
     <data>
         <record id="department_form_view" model="ir.ui.view">
-            <field name="name">hms.department.form</field>
+            <field name="name">hms.department.form.view</field>
             <field name="model">hms.department</field>
             <field name="arch" type="xml">
                 <form>
@@ -15,10 +15,27 @@
                 </form>
             </field>
         </record>
+
+        <record id="department_tree_view" model="ir.ui.view">
+            <field name="name">hms.department.tree.view</field>
+            <field name="model">hms.department</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="name"/>
+                    <field name="capacity"/>
+                    <field name="is_opened"/>
+                </tree>
+            </field>
+        </record>
+
+
+<!--        <menuitem id="menu_hms_department" name="Departments" parent="menu_root_item" action="action_department_form"/>-->
+
         <record id="action_department_form" model="ir.actions.act_window">
             <field name="name">Departments</field>
             <field name="res_model">hms.department</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">form,tree</field>
         </record>
+
     </data>
 </odoo>
