--- a/hms/views/patient.xml
+++ b/hms/views/patient.xml
@@ -10,10 +10,10 @@
                             <field name="first_name"/>
                             <field name="last_name"/>
                             <field name="birth_date"/>
-<!--                            <field name="history" invisible="[('age', '&lt;', 50)]"/>-->
+                            <!--                            <field name="history" invisible="[('age', '&lt;', 50)]"/>-->
                             <field name="cr_ratio" required="context.get('pcr', False)"/>
                             <field name="blood_type"/>
-<!--                            <field name="rhesus_protein"/>-->
+                            <!--                            <field name="rhesus_protein"/>-->
                             <field name="pcr"/>
                             <field name="image"/>
                             <field name="address"/>
@@ -21,8 +21,8 @@
                             <field name="state"/>
                             <field name="department_id"/>
                             <field name="department_capacity"/>
-<!--                            <field name="doctor_ids" widget="many2many_tags"-->
-<!--                                   readonly="[('department_id', '=', False)]"/>-->
+                            <!--                            <field name="doctor_ids" widget="many2many_tags"-->
+                            <!--                                   readonly="[('department_id', '=', False)]"/>-->
                         </group>
                     </sheet>
                 </form>
@@ -43,6 +43,8 @@
             </field>
         </record>
 
+        <menuitem id="menu_hms_patient_all" name="All Patients" parent="menu_root_item"
+                  action="action_hms_patient_all"/>
 
         <record id="action_hms_patient_all" model="ir.actions.act_window">
             <field name="name">All Patients</field>
