--- a/hms/views/department.xml
+++ b/hms/views/department.xml
@@ -10,11 +10,15 @@
                             <field name="name"/>
                             <field name="capacity"/>
                             <field name="is_opened"/>
+                            <field name="patient_count" string="Patients"/>
                         </group>
                     </sheet>
                 </form>
             </field>
         </record>
+
+        <menuitem id="menu_hms_department_all" name="All Departments" parent="menu_root_item"
+                  action="action_hms_department_all"/>
 
         <record id="department_tree_view" model="ir.ui.view">
             <field name="name">hms.department.tree.view</field>
@@ -24,6 +28,7 @@
                     <field name="name"/>
                     <field name="capacity"/>
                     <field name="is_opened"/>
+                    <field name="patient_count" string="Patients"/>
                 </tree>
             </field>
         </record>
