--- a/hms/views/doctor.xml
+++ b/hms/views/doctor.xml
@@ -28,6 +28,7 @@
             </field>
         </record>
 
+        <menuitem id="menu_hms_doctor_all" name="All Doctors" parent="menu_root_item" action="action_hms_doctor_all"/>
 
         <record id="action_hms_doctor_all" model="ir.actions.act_window">
             <field name="name">All Doctors</field>
