--- a/hms/views/base_menus.xml
+++ b/hms/views/base_menus.xml
@@ -3,4 +3,5 @@
     <menuitem id="menu_root_department" name="Departments"/>
     <menuitem id="menu_root_doctor" name="Doctors"/>
     <menuitem id="menu_root_patient" name="Patients"/>
+    <menuitem id="menu_root_customer" name="Partners"/>
 </odoo>
