--- a/hms/views/partner.xml
+++ b/hms/views/partner.xml
@@ -58,4 +58,13 @@
             </xpath>
         </field>
     </record>
+
+    <record id="action_hms_partner_all" model="ir.actions.act_window">
+        <field name="name">All Partners</field>
+        <field name="res_model">res.partner</field>
+        <field name="view_mode">tree,form</field>
+        <field name="domain">[]</field>
+    </record>
+
+    <menuitem id="menu_hms_partner_all" name="All Partners" parent="menu_root_partner" action="action_hms_partner_all"/>
 </odoo>
